After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666126 - window-unfocused widget state fixes
window-unfocused widget state fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal normal
: 3.4
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-12-13 20:46 UTC by Rui Matos
Modified: 2012-01-18 20:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
widget: Always propagate state flags to all children (2.29 KB, patch)
2011-12-13 20:48 UTC, Rui Matos
none Details | Review
range: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (2.81 KB, patch)
2011-12-13 20:48 UTC, Rui Matos
none Details | Review
scale: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (1.66 KB, patch)
2011-12-13 20:48 UTC, Rui Matos
none Details | Review
viewport: Set state flags on draw (1.66 KB, patch)
2011-12-13 20:48 UTC, Rui Matos
none Details | Review
notebook: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (2.26 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
expander: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (1.33 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
scrolledwindow: Set state flags on draw (1.38 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
iconview: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (1.35 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
treeview: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (3.07 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
cellrendererpixbuf: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (940 bytes, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
cellrendererprogress: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (2.24 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
cellrenderertext: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (1.66 KB, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review
cellrenderertoggle: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw (850 bytes, patch)
2011-12-13 20:49 UTC, Rui Matos
none Details | Review

Description Rui Matos 2011-12-13 20:46:49 UTC
This bug is to track instances of widgets which don't draw correctly the window-unfocused state.
Comment 1 Rui Matos 2011-12-13 20:48:41 UTC
Created attachment 203389 [details] [review]
widget: Always propagate state flags to all children
Comment 2 Rui Matos 2011-12-13 20:48:48 UTC
Created attachment 203390 [details] [review]
range: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 3 Rui Matos 2011-12-13 20:48:53 UTC
Created attachment 203391 [details] [review]
scale: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 4 Rui Matos 2011-12-13 20:48:58 UTC
Created attachment 203392 [details] [review]
viewport: Set state flags on draw
Comment 5 Rui Matos 2011-12-13 20:49:03 UTC
Created attachment 203393 [details] [review]
notebook: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 6 Rui Matos 2011-12-13 20:49:08 UTC
Created attachment 203394 [details] [review]
expander: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 7 Rui Matos 2011-12-13 20:49:14 UTC
Created attachment 203395 [details] [review]
scrolledwindow: Set state flags on draw
Comment 8 Rui Matos 2011-12-13 20:49:19 UTC
Created attachment 203396 [details] [review]
iconview: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 9 Rui Matos 2011-12-13 20:49:24 UTC
Created attachment 203397 [details] [review]
treeview: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 10 Rui Matos 2011-12-13 20:49:30 UTC
Created attachment 203398 [details] [review]
cellrendererpixbuf: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 11 Rui Matos 2011-12-13 20:49:35 UTC
Created attachment 203399 [details] [review]
cellrendererprogress: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 12 Rui Matos 2011-12-13 20:49:44 UTC
Created attachment 203400 [details] [review]
cellrenderertext: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 13 Rui Matos 2011-12-13 20:49:49 UTC
Created attachment 203401 [details] [review]
cellrenderertoggle: Set GTK_STATE_FLAG_WINDOW_UNFOCUSED on draw
Comment 14 Rui Matos 2011-12-13 21:14:34 UTC
Obsoleting patches. I pushed the wip/window-unfocused-fixes branch into git
instead.
Comment 15 Cosimo Cecchi 2012-01-18 20:55:29 UTC
These have been merged quite some time ago.