widget: Always propagate state flags to all children

https://bugzilla.gnome.org/show_bug.cgi?id=666126